Add process and path after load to material status
