# server/machine-watch-swagger.json
@@ -1745,9 +1745,6 @@
         "Pallet": {
           "type": "string"
         },
-        "Fixture": {
-          "type": "string"
-        },
         "Face": {
           "type": "integer",
           "format": "int32"
@@ -1776,7 +1773,9 @@
       "additionalProperties": false,
       "required": [
         "Type",
-        "LoadOntoFace"
+        "LoadOntoFace",
+        "ProcessAfterLoad",
+        "PathAfterLoad"
       ],
       "properties": {
         "Type": {
@@ -1786,6 +1785,14 @@
           "type": "string"
         },
         "LoadOntoFace": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "ProcessAfterLoad": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "PathAfterLoad": {
           "type": "integer",
           "format": "int32"
         },
